03-vs/simple/overlays/location/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front
spec:
  hosts:
  - front.lab-vs-simple.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: "/admin"
    rewrite:
      uri: "/hello"
    route:
    - destination:
        host: admin.lab-vs-simple.svc.cluster.local
  - route:
    - destination:
        host: front.lab-vs-simple.svc.cluster.local
